--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "less": "^2.7.1",
     "lodash": "^4.17.2",
     "mobx": "^3.0.2",
+    "mobx-react": "^4.1.0",
+    "mobx-react-devtools": "^4.2.11",
+    "mobx-utils": "^2.0.1",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
@@ -71,7 +74,6 @@
     "react-dom": "^15.4.2",
     "react-file-download": "^0.3.1",
     "react-fontawesome": "^1.4.0",
-    "react-radio-group": "^3.0.1",
     "react-redux": "^4.4.5",
     "react-renderif": "^1.0.2",
     "react-router": "^2.5.2",
@@ -145,7 +147,7 @@
     "redux-devtools-log-monitor": "^1.0.11",
     "request": "^2.76.0",
     "sinon": "^1.17.4",
-    "swagger-js-codegen": "https://github.com/cBioPortal/swagger-js-codegen.git#f1a436a3ca3dfa5e8199083915a0c13ec28700e5",
+    "swagger-js-codegen": "https://github.com/cBioPortal/swagger-js-codegen.git#1b768600496db2415f956f6c4d8593bbb6e95297",
     "tslint": "^3.15.1",
     "tslint-react": "^1.0.0",
     "webpack-dev-server": "^1.15.0",
