--- a/package.json
+++ b/package.json
@@ -24,16 +24,30 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "autoprefixer": "^6.6.1",
-    "babel-core": "^6.21.0",
+    "@types/chai": "^3.4.34",
+    "@types/jquery": "^2.0.39",
+    "@types/lodash": "^4.14.50",
+    "@types/mocha": "^2.2.38",
+    "@types/query-string": "^3.0.31",
+    "@types/raphael": "^2.1.30",
+    "@types/react": "^15.0.4",
+    "@types/react-bootstrap": "^0.0.43",
+    "@types/react-dom": "^0.14.21",
+    "@types/react-router": "^2.0.46",
+    "@types/react-spinkit": "^1.1.29",
+    "@types/reselect": "^2.0.27",
+    "@types/seamless-immutable": "^6.1.2",
+    "@types/superagent": "^2.0.36",
+    "autoprefixer": "^6.7.0",
+    "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.22.0",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.18.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.22.0",
     "bootstrap": "^3.3.7",
     "bootstrap-loader": "^1.2.0-beta.1",
     "bootstrap-sass": "^3.3.7",
@@ -42,7 +56,7 @@
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "cssnano": "^3.10.0",
-    "d3": "^3.5.6",
+    "d3": "^4.4.4",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -56,37 +70,38 @@
     "json-fn": "^1.1.1",
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
-    "node-sass": "^4.2.0",
+    "lodash": "^4.17.4",
+    "node-sass": "^4.3.0",
     "postcss-loader": "^1.2.2",
     "precss": "^1.4.0",
-    "progress-bar-webpack-plugin": "^1.9.2",
+    "progress-bar-webpack-plugin": "^1.9.3",
     "qtip2": "^3.0.3",
-    "query-string": "^4.2.3",
+    "query-string": "^4.3.1",
     "rc-tooltip": "^3.4.2",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
-    "react-addons-test-utils": "15.4.2",
+    "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-file-download": "^0.3.2",
     "react-if": "^2.1.0",
     "react-redux": "^5.0.2",
     "react-renderif": "^1.0.2",
-    "react-router": "^3.0.1",
+    "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
-    "react-spinkit": "^1.1.11",
+    "react-spinkit": "^2.0.0",
     "react-tooltip": "^3.2.2",
     "react-zeroclipboard": "^3.2.2",
     "reactable": "^0.14.1",
     "reactableMSK": "git+https://github.com/alisman/reactable.git",
-    "recharts": "^0.20.2",
+    "recharts": "^0.20.5",
     "redux": "^3.6.0",
-    "redux-actions": "^1.2.0",
+    "redux-actions": "^1.2.1",
     "redux-api-middleware": "^1.0.2",
     "redux-immutable": "^3.0.10",
     "redux-module-builder": "^0.3.2",
     "redux-seamless-immutable": "^0.3.0",
-    "redux-thunk": "^2.1.0",
+    "redux-thunk": "^2.2.0",
     "render-if": "^0.1.1",
     "reselect": "^2.5.4",
     "resolve-url-loader": "^1.6.1",
@@ -97,32 +112,18 @@
     "seamless-immutable": "^7.0.1",
     "source-map-loader": "^0.1.6",
     "style-loader": "^0.13.1",
-    "superagent": "^3.3.2",
-    "swagger-client": "^2.1.31",
+    "superagent": "^3.4.0",
+    "swagger-client": "^2.1.32",
     "swagger-js-codegen": "git+https://github.com/cBioPortal/swagger-js-codegen.git#f1a436a3ca3dfa5e8199083915a0c13ec28700e5",
-    "ts-loader": "^1.3.3",
+    "ts-loader": "^2.0.0",
     "typescript": "^2.1.5",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
     "webpack-fail-plugin": "^1.0.5",
-    "webpack-raphael": "^2.1.4",
-    "@types/jquery": "^2.0.39",
-    "@types/lodash": "^4.14.48",
-    "@types/query-string": "^3.0.31",
-    "@types/mocha": "^2.2.0",
-    "@types/raphael": "^2.1.30",
-    "@types/react": "^15.0.0",
-    "@types/chai": "^3.4.28",
-    "@types/react-bootstrap": "0.0.37",
-    "@types/react-dom": "^0.14.20",
-    "@types/react-spinkit": "^1.1.28",
-    "@types/redux": "^3.6.0",
-    "@types/seamless-immutable": "^6.1.2",
-    "@types/superagent": "^2.0.36"
+    "webpack-raphael": "^2.1.4"
   },
   "devDependencies": {
-
     "argparse": "^1.0.9",
     "babel-plugin-istanbul": "^3.1.2",
     "babel-plugin-rewire": "^1.0.0",
@@ -130,8 +131,8 @@
     "chai-enzyme": "^0.6.1",
     "cheerio": "^0.22.0",
     "colors": "^1.1.2",
-    "enzyme": "^2.7.0",
-    "eslint": "^3.13.1",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
@@ -139,7 +140,7 @@
     "expect": "^1.20.2",
     "istanbul-instrumenter-loader": "^1.2.0",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
+    "karma": "^1.4.0",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
     "karma-coverage-es6": "^0.2.7",
@@ -148,19 +149,19 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.26",
-    "karma-webpack": "^2.0.1",
+    "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
     "phantomjs-polyfill": "^0.0.2",
     "phantomjs-prebuilt": "^2.1.14",
     "pre-commit": "^1.2.2",
     "react-addons-test-utils": "^15.4.2",
-    "redux-devtools": "^3.3.1",
+    "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.2.0",
     "request": "^2.79.0",
     "sinon": "^1.17.7",
-    "swagger-js-codegen": "https://github.com/cBioPortal/swagger-js-codegen.git#f1a436a3ca3dfa5e8199083915a0c13ec28700e5",
-    "tslint": "^4.3.1",
+    "swagger-js-codegen": "https://github.com/cBioPortal/swagger-js-codegen.git#1b768600496db2415f956f6c4d8593bbb6e95297",
+    "tslint": "^4.4.2",
     "tslint-react": "^2.3.0",
     "webpack-dev-server": "^1.16.2",
     "yargs": "^6.6.0"
