--- a/package.json
+++ b/package.json
@@ -74,6 +74,10 @@
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
     "lodash": "^4.17.4",
+    "mobx": "^3.0.2",
+    "mobx-react": "^4.1.0",
+    "mobx-react-devtools": "^4.2.11",
+    "mobx-utils": "^2.0.1",
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.2.2",
     "precss": "^1.4.0",
