--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-clipboard.js": "^1.0.1",
     "react-dom": "^15.4.2",
     "react-file-download": "^0.3.2",
     "react-if": "^2.1.0",
