--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "updateHotspotsAPI": "npm run fetchHotspotsAPI && npm run buildHotspotsAPI",
     "fetchHotspotsAPI": "curl http://cancerhotspots.org/v2/api-docs?group=cancer_hotspots > src/shared/api/CancerHotspotsAPI-docs.json",
     "buildHotspotsAPI": "node scripts/generate-hotspots-api.js",
-    "test": "karma start karma.conf.js",
+    "test": "karma start karma.conf.js --reporters spec",
+    "test:coverage": "karma start karma.conf.js --reporters spec,coverage",
     "test:watch": "npm run test -- --watch",
     "lint": "find . -name '*.tsx' | xargs tslint",
     "eslint": "eslint src/** --ext .js --ext .jsx --cache",
