--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "fetchHotspotsAPI": "curl http://cancerhotspots.org/v2/api-docs?group=cancer_hotspots > src/shared/api/CancerHotspotsAPI-docs.json",
     "buildHotspotsAPI": "node scripts/generate-hotspots-api.js",
     "test": "karma start karma.conf.js --reporters spec",
-    "test:coverage": "karma start karma.conf.js --reporters spec,coverage",
+    "test:coverage": "karma start karma.conf.js --reporters coverage,spec",
     "test:watch": "npm run test -- --watch",
     "lint": "find . -name '*.tsx' | xargs tslint",
     "eslint": "eslint src/** --ext .js --ext .jsx --cache",
@@ -145,7 +145,7 @@
     "expect": "^1.20.2",
     "istanbul-instrumenter-loader": "^1.2.0",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.4.0",
+    "karma": "^1.4.1",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
     "karma-coverage-es6": "^0.2.7",
