fix compile errors

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/mocha": "^2.2.38",
     "@types/query-string": "^3.0.31",
     "@types/raphael": "^2.1.30",
-    "@types/react": "^15.0.4",
+    "@types/react": "15.0.4",
     "@types/react-bootstrap": "^0.0.43",
     "@types/react-dom": "^0.14.21",
     "@types/react-router": "^2.0.46",
@@ -59,7 +59,7 @@
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "cssnano": "^3.10.0",
-    "d3": "^3.5.6",
+    "d3": "3.5.6",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
