Add code coverage reporting
- Use istanbul instrumenter loader and coverageIstanbulReporter
- Output lcov for codecov.io, update Travis to upload lcov file
- Exclude API clients from testing
- Since source files are not included in coverage report if they are not
  imported in a spec files, a bash script for generating spec files was made.
  The script uses a template to generate them.
- Add the generated spec files for ts/tsx source files w/o one.


Former-commit-id: fd1a549aab444996259e6853e1dce668abd892db

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
       }
 after_success:
  # upload coverage data to codecov.io
- - cat coverage/*/lcov.info | codecov
+ - cat test/fixtures/outputs/lcov.info | codecov
 cache:
   directories:
     - node_modules
