--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
     "karma-coverage-es6": "^0.2.7",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
