--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-spinkit": "^1.1.29",
     "@types/reselect": "^2.0.27",
     "@types/seamless-immutable": "^6.1.2",
+    "@types/sinon": "^1.16.35",
     "@types/superagent": "^2.0.36",
     "autoprefixer": "^6.7.0",
     "babel-core": "^6.22.1",
