Add typings for reactable
Former-commit-id: 6824967ffad249bba1e7b54a40d1ae151b0125b1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
         "allowSyntheticDefaultImports": true
     },
     "include": [
-        "./typings/missing.d.ts",
+        "./typings/**/*",
         "./src/**/*"
     ],
     "compileOnSave": false
