Fix module resolution config problem
Former-commit-id: 911e79f7bcfd65c9762a1de41ff4eac1f93703ad

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
     "compilerOptions": {
-        "rootDir": "./src/",
         "outDir": "./tsDist/",
         "sourceMap": true,
         "noImplicitAny": true,
@@ -10,7 +9,14 @@
         "jsx": "preserve",
         "allowJs": true,
         "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "moduleResolution": "node",
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "src/*"
+            ]
+        }
     },
     "include": [
         "./typings/**/*",
