--- a/package.json
+++ b/package.json
@@ -101,9 +101,12 @@
     "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-clipboard.js": "^1.0.1",
+    "react-collapse": "^2.3.3",
     "react-dom": "^15.4.2",
     "react-file-download": "^0.3.2",
+    "react-height": "^2.2.0",
     "react-if": "^2.1.0",
+    "react-motion": "^0.4.7",
     "react-redux": "^5.0.2",
     "react-renderif": "^1.0.2",
     "react-router": "^3.0.2",
