--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "",
   "dependencies": {
     "@types/chai": "^3.4.34",
+    "@types/enzyme": "^2.7.4",
     "@types/jquery": "^2.0.39",
     "@types/lodash": "^4.14.53",
     "@types/mocha": "^2.2.38",
@@ -41,9 +42,8 @@
     "@types/react-spinkit": "^1.1.29",
     "@types/reselect": "^2.0.27",
     "@types/seamless-immutable": "^6.1.2",
-    "@types/superagent": "^2.0.36",
-    "@types/enzyme": "^2.7.4",
     "@types/sinon": "^1.16.35",
+    "@types/superagent": "^2.0.36",
     "autoprefixer": "^6.7.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -81,6 +81,7 @@
     "mobx-react": "^4.1.0",
     "mobx-react-devtools": "^4.2.11",
     "mobx-utils": "^2.0.1",
+    "mobxpromise": "^0.0.4",
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.2.2",
     "precss": "^1.4.0",
