Resolve issues with typings

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "",
   "dependencies": {
     "@types/chai": "^3.4.34",
+    "@types/enzyme": "^2.7.4",
     "@types/jquery": "^2.0.39",
     "@types/lodash": "^4.14.53",
     "@types/mocha": "^2.2.38",
@@ -37,13 +38,13 @@
     "@types/react": "15.0.4",
     "@types/react-bootstrap": "^0.0.43",
     "@types/react-dom": "^0.14.21",
+    "@types/react-redux": "^4.4.36",
     "@types/react-router": "^2.0.46",
     "@types/react-spinkit": "^1.1.29",
     "@types/reselect": "^2.0.27",
     "@types/seamless-immutable": "^6.1.2",
-    "@types/superagent": "^2.0.36",
-    "@types/enzyme": "^2.7.4",
     "@types/sinon": "^1.16.35",
+    "@types/superagent": "^2.0.36",
     "autoprefixer": "^6.7.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
