integrate the clinical timeline

--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
     "bootstrap-loader": "^1.2.0-beta.1",
     "bootstrap-sass": "^3.3.7",
     "bundle-loader": "^0.5.4",
+    "clinical-timeline": "0.0.14",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "cssnano": "^3.10.0",
     "d3": "3.5.6",
+    "datatables.net": "^1.10.13",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -77,6 +79,7 @@
     "html-webpack-plugin": "^2.26.0",
     "imports-loader": "^0.7.0",
     "jquery": "^3.1.1",
+    "jquery-migrate": "^3.0.0",
     "json-fn": "^1.1.1",
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
