--- a/package.json
+++ b/package.json
@@ -84,10 +84,11 @@
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
     "lodash": "^4.17.4",
-    "mobx": "^3.0.2",
-    "mobx-react": "^4.1.0",
+    "mobx": "^3.1.4",
+    "mobx-react": "^4.1.2",
     "mobx-react-devtools": "^4.2.11",
     "mobx-utils": "^2.0.1",
+    "mobxpromise": "^0.0.16",
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.2.2",
     "precss": "^1.4.0",
