impelement pathology report tab.  check git api for existence of file.  show it using pdfobject
add support for multipe pdfs


Former-commit-id: 9d1c6a7ed9cfff64966ddb426fc77c2c11ce4702

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jquery": "^2.0.39",
     "@types/lodash": "^4.14.53",
     "@types/mocha": "^2.2.38",
+    "@types/pdfobject": "^2.0.5",
     "@types/query-string": "^3.0.31",
     "@types/raphael": "^2.1.30",
     "@types/rc-tooltip": "^3.4.2",
@@ -90,6 +91,7 @@
     "mobx-utils": "^2.0.1",
     "mobxpromise": "^1.0.3",
     "node-sass": "^4.3.0",
+    "pdfobject": "^2.0.201604172",
     "postcss-loader": "^1.2.2",
     "precss": "^1.4.0",
     "progress-bar-webpack-plugin": "^1.9.3",
