--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "mobx": "^3.1.4",
     "mobx-react": "^4.1.2",
     "mobx-react-devtools": "^4.2.11",
+    "mobx-react-router": "^3.1.2",
     "mobx-utils": "^2.0.1",
     "mobxpromise": "^1.0.3",
     "node-sass": "^4.3.0",
