--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "less": "^2.7.2",
     "lodash": "^4.17.4",
     "lolex": "^1.6.0",
+    "memoize-weak-decorator": "^1.0.3",
     "mobx": "^3.1.7",
     "mobx-react": "^4.1.3",
     "mobx-react-devtools": "^4.2.11",
