--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "@types/react": "15.0.4",
     "@types/react-bootstrap": "^0.0.43",
     "@types/react-dom": "^0.14.21",
-    "@types/react-redux": "^4.4.36",
     "@types/react-fontawesome": "^1.5.0",
+    "@types/react-redux": "^4.4.36",
     "@types/react-router": "^2.0.46",
     "@types/react-spinkit": "^1.1.29",
     "@types/reselect": "^2.0.27",
@@ -66,6 +66,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-loader": "^1.2.0-beta.1",
     "bootstrap-sass": "^3.3.7",
+    "build-url": "^1.0.9",
     "bundle-loader": "^0.5.4",
     "classnames": "^2.2.5",
     "clinical-timeline": "0.0.14",
