--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react-router": "^2.0.46",
     "@types/react-spinkit": "^1.1.29",
     "@types/reselect": "^2.0.27",
+    "@types/route-parser": "0.0.0",
     "@types/seamless-immutable": "^6.1.2",
     "@types/sinon": "^1.16.35",
     "@types/superagent": "^2.0.36",
@@ -132,6 +133,7 @@
     "resolve-url-loader": "^1.6.1",
     "responsive-fixed-data-table": "^2.0.0",
     "rimraf": "^2.5.4",
+    "route-parser": "0.0.5",
     "sass-loader": "^4.1.1",
     "sass-resources-loader": "^1.1.0",
     "seamless-immutable": "^7.0.1",
