Use React context instead of static instance of QueryStore

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-redux": "^4.4.36",
     "@types/react-router": "^2.0.46",
     "@types/react-spinkit": "^1.1.29",
+    "@types/recompose": "^0.20.4",
     "@types/reselect": "^2.0.27",
     "@types/route-parser": "0.0.0",
     "@types/seamless-immutable": "^6.1.2",
@@ -132,6 +133,7 @@
     "reactable": "^0.14.1",
     "reactableMSK": "git+https://github.com/alisman/reactable.git",
     "recharts": "^0.20.5",
+    "recompose": "^0.22.0",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
     "redux-api-middleware": "^1.0.2",
