--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react": "15.0.4",
     "@types/react-bootstrap": "^0.0.43",
     "@types/react-dom": "^0.14.21",
+    "@types/react-overlays":"^0.6.3",
     "@types/react-redux": "^4.4.36",
     "@types/react-router": "^2.0.46",
     "@types/react-spinkit": "^1.1.29",
@@ -109,6 +110,7 @@
     "react-height": "^2.2.0",
     "react-if": "^2.1.0",
     "react-motion": "^0.4.7",
+    "react-overlays": "^0.6.12",
     "react-redux": "^5.0.2",
     "react-renderif": "^1.0.2",
     "react-router": "^3.0.2",
