--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "mobx-react-devtools": "^4.2.11",
     "mobx-utils": "^2.0.1",
     "mobxpromise": "^1.0.3",
+    "natural-sort": "^1.0.0",
     "node-sass": "^4.3.0",
     "pdfobject": "^2.0.201604172",
     "postcss-loader": "^1.2.2",
