--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "webpack-raphael": "^2.1.4"
   },
   "devDependencies": {
+    "@types/lolex": "^1.5.31",
     "argparse": "^1.0.9",
     "babel-plugin-istanbul": "^3.1.2",
     "babel-plugin-rewire": "^1.0.0",
@@ -168,6 +169,7 @@
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
     "expect": "^1.20.2",
+    "expect-jsx": "^3.0.0",
     "istanbul-instrumenter-loader": "^1.2.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.4.0",
@@ -181,6 +183,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.26",
     "karma-webpack": "^2.0.2",
+    "lolex": "^1.6.0",
     "mocha": "^3.2.0",
     "phantomjs-polyfill": "^0.0.2",
     "phantomjs-prebuilt": "^2.1.14",
