--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/seamless-immutable": "^6.1.2",
     "@types/sinon": "^1.16.35",
     "@types/superagent": "^2.0.36",
+    "@types/urijs": "^1.15.31",
     "autoprefixer": "^6.7.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -148,6 +149,7 @@
     "ts-loader": "^2.0.0",
     "typescript": "2.2.1",
     "underscore": "^1.8.3",
+    "urijs": "^1.18.9",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
     "webpack-fail-plugin": "^1.0.5",
