--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "font-awesome-webpack": "^0.0.4",
     "html-webpack-plugin": "^2.26.0",
     "imports-loader": "^0.7.0",
+    "javascript-natural-sort": "^0.7.1",
     "jquery": "^3.1.1",
     "jquery-migrate": "^3.0.0",
     "json-fn": "^1.1.1",
@@ -94,7 +95,6 @@
     "mobx-react-router": "^3.1.2",
     "mobx-utils": "^2.0.1",
     "mobxpromise": "^1.2.0",
-    "natural-sort": "^1.0.0",
     "node-sass": "^4.3.0",
     "pdfobject": "^2.0.201604172",
     "postcss-loader": "^1.2.2",
