--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "mobx-utils": "^2.0.1",
     "mobxpromise": "^1.2.0",
     "node-sass": "^4.3.0",
+    "parameter-validator": "^1.0.2",
     "pdfobject": "^2.0.201604172",
     "postcss-loader": "^1.2.2",
     "precss": "^1.4.0",
