Use 'url' package for building and parsing urls

--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@types/lodash": "^4.14.53",
     "@types/mocha": "^2.2.38",
     "@types/pdfobject": "^2.0.5",
-    "@types/query-string": "^3.0.31",
     "@types/raphael": "^2.1.30",
     "@types/rc-tooltip": "^3.4.2",
     "@types/react": "15.0.4",
@@ -51,7 +50,6 @@
     "@types/seamless-immutable": "^6.1.2",
     "@types/sinon": "^1.16.35",
     "@types/superagent": "^2.0.36",
-    "@types/urijs": "^1.15.31",
     "autoprefixer": "^6.7.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -103,7 +101,6 @@
     "precss": "^1.4.0",
     "progress-bar-webpack-plugin": "^1.9.3",
     "qtip2": "^3.0.3",
-    "query-string": "^4.3.1",
     "rc-tooltip": "^3.4.2",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
@@ -150,7 +147,7 @@
     "ts-loader": "^2.0.0",
     "typescript": "2.2.1",
     "underscore": "^1.8.3",
-    "urijs": "^1.18.9",
+    "url": "^0.11.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
     "webpack-fail-plugin": "^1.0.5",
