install sentry.js raven error logging

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "precss": "^1.4.0",
     "progress-bar-webpack-plugin": "^1.9.3",
     "qtip2": "^3.0.3",
+    "raven-js": "^3.14.2",
     "rc-tooltip": "^3.4.2",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
@@ -139,6 +140,7 @@
     "route-parser": "0.0.5",
     "sass-loader": "^4.1.1",
     "sass-resources-loader": "^1.1.0",
+    "script-loader": "^0.7.0",
     "seamless-immutable": "^7.0.1",
     "source-map-loader": "^0.1.6",
     "style-loader": "^0.13.1",
