--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "fixed-data-table": "^0.6.3",
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "^0.0.4",
+    "highcharts": "^5.0.11",
     "html-webpack-plugin": "^2.26.0",
     "imports-loader": "^0.7.0",
     "javascript-natural-sort": "^0.7.1",
