--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-redux": "^4.4.36",
     "@types/react-router": "^2.0.46",
     "@types/react-spinkit": "^1.1.29",
+    "@types/react-transition-group": "^1.1.0",
     "@types/recompose": "^0.20.4",
     "@types/reselect": "^2.0.27",
     "@types/route-parser": "0.0.0",
@@ -130,6 +131,7 @@
     "react-select": "^1.0.0-rc.3",
     "react-spinkit": "^1.1.0",
     "react-tooltip": "^3.2.2",
+    "react-transition-group": "^1.1.3",
     "react-zeroclipboard": "^3.2.2",
     "reactable": "^0.14.1",
     "reactableMSK": "git+https://github.com/alisman/reactable.git",
