--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
   "author": "",
   "license": "",
   "dependencies": {
-
-    "@types/chai": "3.5.2",
+    "@types/chai": "^3.4.34",
     "@types/classnames": "0.0.32",
     "@types/enzyme": "2.8.0",
     "@types/highcharts": "4.2.57",
@@ -122,6 +121,7 @@
     "react-clipboard.js": "^1.0.1",
     "react-collapse": "^2.3.3",
     "react-dom": "^15.4.2",
+    "react-draggable": "^2.2.6",
     "react-file-download": "^0.3.2",
     "react-fontawesome": "^1.5.0",
     "react-height": "^2.2.0",
