--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "react-router-redux": "^4.0.7",
     "react-select": "^1.0.0-rc.4",
     "react-spinkit": "^1.1.0",
+    "react-text-truncate": "^0.9.0",
     "react-tooltip": "^3.2.2",
     "react-transition-group": "^1.1.3",
     "react-zeroclipboard": "^3.2.2",
