Add browser/browser version detection so error message can be provided if version of IE used is earlier than IE11.

--- a/package.json
+++ b/package.json
@@ -33,15 +33,16 @@
   "dependencies": {
     "@types/chai": "^3.4.34",
     "@types/classnames": "0.0.32",
-    "@types/enzyme": "2.8.0",
-    "@types/highcharts": "4.2.57",
-    "@types/jquery": "2.0.46",
-    "@types/lodash": "4.14.66",
-    "@types/lolex": "1.5.31",
-    "@types/mocha": "2.2.41",
-    "@types/pdfobject": "2.0.5",
-    "@types/raphael": "2.1.30",
-    "@types/rc-tooltip": "3.4.6",
+    "@types/detect-browser": "^1.6.0",
+    "@types/enzyme": "^2.7.4",
+    "@types/highcharts": "^4.2.54",
+    "@types/jquery": "^2.0.39",
+    "@types/lodash": "^4.14.53",
+    "@types/lolex": "^1.5.31",
+    "@types/mocha": "^2.2.38",
+    "@types/pdfobject": "^2.0.5",
+    "@types/raphael": "^2.1.30",
+    "@types/rc-tooltip": "^3.4.2",
     "@types/react": "15.0.4",
     "@types/react-bootstrap": "^0.0.43",
     "@types/react-dom": "^0.14.21",
@@ -79,6 +80,7 @@
     "cssnano": "^3.10.0",
     "d3": "3.5.6",
     "datatables.net": "^1.10.13",
+    "detect-browser": "^1.7.0",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
