--- a/package.json
+++ b/package.json
@@ -177,7 +177,7 @@
     "chai-enzyme": "^0.6.1",
     "cheerio": "^0.22.0",
     "colors": "^1.1.2",
-    "enzyme": "^2.7.1",
+    "enzyme": "2.8.0",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
