--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-bootstrap-autosuggest": "^0.5.0",
     "react-clipboard.js": "^1.0.1",
     "react-collapse": "^2.3.3",
     "react-dom": "^15.4.2",
