Add test for TS swagger client generation
Add test for TS swagger client generation. We had an issue where the TS swagger
client was not up to date with the checked in docs. This test should prevent
that. Updated the README as well in terms of how we're setting the API_ROOT


Former-commit-id: c2fd5adce61bf223d76167c7113acaf6b2a35081

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "4.4.7"
+  - "v6.11.0"
 env:
   - CXX=g++-4.8
 addons:
@@ -17,16 +17,8 @@ install:
   # install codecov.io
   - npm install codecov.io
 script:
-  - echo 'API_ROOT=http://cbioportal-rc.herokuapp.com/api' > .env
-  # make sure json is in sync on master and rc branch (since these are branches
-  # about to be deployed)
-  - |
-      if [ "${TRAVIS_BRANCH}" == "master" ] || [[ "${TRAVIS_BRANCH}" =~ ^rc.* ]]; then
-        (npm run fetchAPI && git diff --quiet src/shared/api/generated/CBioPortalAPI-docs.json) || (echo 'src/shared/api/generated/CBioPortalAPI-docs.json out of sync' && exit 1);
-        (git diff --quiet src/shared/api/generated/CBioPortalAPIInternal-docs.json) || (echo 'src/shared/api/generated/CBioPortalAPIInternal-docs.json out of sync' && exit 1);
-        (npm run fetchHotspotsAPI && git diff --quiet src/shared/api/generated/CancerHotspotsAPI-docs.json) || (echo 'src/shared/api/generated/CancerHotspotsAPI-docs.json out of sync' && exit 1);
-        (npm run fetchOncoKbAPI && git diff --quiet src/shared/api/generated/OncoKbAPI-docs.json) || (echo 'src/shared/api/generated/OncoKbAPI-docs.json out of sync' && exit 1);
-      fi
+  # make sure json/ts client is in sync
+  - bash src/test/check_api_sync.sh
   # Run build
   - npm run build
   # Run test
