beginnings of a heatmap hack, axes incomplete

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "jquery-migrate": "^3.0.0",
     "json-fn": "^1.1.1",
     "json-loader": "^0.5.4",
+    "konva": "^1.6.3",
     "less": "^2.7.2",
     "lodash": "^4.17.4",
     "lolex": "^1.6.0",
@@ -104,7 +105,7 @@
     "progress-bar-webpack-plugin": "^1.9.3",
     "qtip2": "^3.0.3",
     "rc-tooltip": "^3.4.2",
-    "react": "^15.4.2",
+    "react": "^15.6.0",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.7",
@@ -112,8 +113,10 @@
     "react-collapse": "^2.3.3",
     "react-dom": "^15.4.2",
     "react-file-download": "^0.3.2",
+    "react-heatmap": "^1.0.6",
     "react-height": "^2.2.0",
     "react-if": "^2.1.0",
+    "react-konva": "^1.1.3",
     "react-motion": "^0.4.7",
     "react-redux": "^5.0.2",
     "react-renderif": "^1.0.2",
@@ -123,6 +126,7 @@
     "react-zeroclipboard": "^3.2.2",
     "reactable": "^0.14.1",
     "reactableMSK": "git+https://github.com/alisman/reactable.git",
+    "reactochart": "git+https://github.com/spotify/reactochart.git#0.2.1",
     "recharts": "^0.20.5",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
