--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "fixed-data-table": "^0.6.3",
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "^0.0.4",
+    "highcharts": "^5.0.12",
+    "highcharts-heatmap": "^0.1.2",
     "html-webpack-plugin": "^2.26.0",
     "imports-loader": "^0.7.0",
     "javascript-natural-sort": "^0.7.1",
@@ -115,6 +117,7 @@
     "react-file-download": "^0.3.2",
     "react-heatmap": "^1.0.6",
     "react-height": "^2.2.0",
+    "react-highcharts": "^12.0.0",
     "react-if": "^2.1.0",
     "react-konva": "^1.1.3",
     "react-motion": "^0.4.7",
