--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "license": "",
   "dependencies": {
     "@types/chart.js": "^2.4.6",
-    "3dmol": "^1.1.3"
+    "3dmol": "^1.1.3",
     "@types/chai": "3.5.2",
     "@types/classnames": "0.0.32",
     "@types/enzyme": "2.8.0",
