--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "@types/chart.js": "^2.4.6",
     "3dmol": "^1.1.3",
     "@types/chai": "3.5.2",
     "@types/classnames": "0.0.32",
@@ -75,6 +76,7 @@
     "bootstrap-loader": "^1.2.0-beta.1",
     "bootstrap-sass": "^3.3.7",
     "bundle-loader": "^0.5.4",
+    "chart.js": "^2.6.0",
     "classnames": "^2.2.5",
     "clinical-timeline": "0.0.14",
     "copy-webpack-plugin": "^4.0.1",
@@ -173,7 +175,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
     "webpack-fail-plugin": "^1.0.5",
-    "webpack-raphael": "^2.1.4"
+    "webpack-raphael": "^2.1.4",
+    "word-wrap": "^1.2.3"
   },
   "devDependencies": {
     "argparse": "^1.0.9",
