--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "3dmol": "^1.1.3",
     "@types/chai": "3.5.2",
     "@types/classnames": "0.0.32",
+    "@types/detect-browser": "^1.6.0",
     "@types/enzyme": "2.8.0",
     "@types/highcharts": "4.2.57",
     "@types/jquery": "2.0.46",
@@ -85,6 +86,7 @@
     "cssnano": "^3.10.0",
     "d3": "3.5.6",
     "datatables.net": "^1.10.13",
+    "detect-browser": "^1.7.0",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
