--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "@types/chart.js": "^2.4.6",
     "3dmol": "^1.1.3",
     "@types/chai": "3.5.2",
+    "@types/chart.js": "^2.4.6",
     "@types/classnames": "0.0.32",
     "@types/detect-browser": "^1.6.0",
     "@types/enzyme": "2.8.0",
@@ -80,6 +80,7 @@
     "chart.js": "^2.6.0",
     "classnames": "^2.2.5",
     "clinical-timeline": "0.0.14",
+    "convert-css-color-name-to-hex": "^0.1.1",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
