points to genome nexus heroku app

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:size": "npm run clean && npm run buildDLL:prod && cross-env NODE_ENV=production webpack --json > stats.json",
     "buildBootstrap": "sass --style :compressed src/globalStyles/bootstrap-entry.scss src/globalStyles/prefixed-bootstrap.min.css",
     "heroku-postbuild": "npm run build && npm install http-server -g",
-    "updateAPI": "npm run fetchAPI && npm run buildAPI && npm run updateHotspotsAPI && npm run updateOncoKbAPI",
+    "updateAPI": "npm run fetchAPI && npm run buildAPI && npm run updateHotspotsAPI && npm run updateOncoKbAPI && npm run updateGenomeNexusAPI",
     "fetchAPI": "curl http://cbioportal-release-1-7-0.herokuapp.com/api/api-docs > src/shared/api/generated/CBioPortalAPI-docs.json && curl http://cbioportal-release-1-7-0.herokuapp.com/api/api-docs?group=internal > src/shared/api/generated/CBioPortalAPIInternal-docs.json",
     "buildAPI": "node scripts/generate-api.js src/shared/api/generated CBioPortalAPI CBioPortalAPIInternal",
     "updateHotspotsAPI": "npm run fetchHotspotsAPI && npm run buildHotspotsAPI",
@@ -21,8 +21,8 @@
     "fetchOncoKbAPI": "curl http://oncokb.org/api/v1/v2/api-docs > src/shared/api/generated/OncoKbAPI-docs.json",
     "buildOncoKbAPI": "node scripts/generate-api.js src/shared/api/generated OncoKbAPI",
     "updateGenomeNexusAPI": "npm run fetchGenomeNexusAPI && npm run buildGenomeNexusAPI",
-    "fetchGenomeNexusAPI": "curl http://localhost:38080/v2/api-docs?group=variant_annotation > src/shared/api/generated/GenomeNexusAPI-docs.json",
-    "buildGenomeNexusAPI": "node scripts/generate-api.js src/shared/api/generated GenomeNexusAPI",
+    "fetchGenomeNexusAPI": "curl https://genome-nexus-mutation-assessor.herokuapp.com/v2/api-docs?group=variant_annotation > src/shared/api/generated/GenomeNexusAPI-docs.json",
+    "buildGenomeNexusAPI": "node scripts/generate-api.js src/shared/api/generated GenomeNexusAPI",   
     "test": "karma start karma.conf.js",
     "test:watch": "npm run test -- --watch",
     "lint": "tslint 'src/**/*.ts' 'src/**/*.tsx' --exclude 'src/shared/api/generated/**'",
